<?xml version="1.0"?>
<project
        xmlns="http://maven.apache.org/POM/4.0.0"
        xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
        xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/maven-v4_0_0.xsd">
    <modelVersion>4.0.0</modelVersion>

    <groupId>com.opcal</groupId>
    <artifactId>OPCal_SI</artifactId>
    <packaging>jar</packaging>
    <name>OPCal_SI</name>
    <version>1.0-SNAPSHOT</version>

    <dependencies>
        <!-- Torque runtime -->
        <dependency>
            <artifactId>torque-runtime</artifactId>
            <groupId>org.apache.torque</groupId>
            <version>5.0</version>
        </dependency>

        <!-- db driver -->
        <dependency>
            <artifactId>mysql-connector-java</artifactId>
            <groupId>mysql</groupId>
            <version>8.0.21</version>
        </dependency>

        <!-- Logging via log4j2 -->
        <dependency>
            <groupId>org.apache.logging.log4j</groupId>
            <artifactId>log4j-slf4j-impl</artifactId>
            <version>2.13.3</version>
            <scope>runtime</scope>
        </dependency>

		<dependency>
			<groupId>com.itextpdf</groupId>
		    <artifactId>itext-core</artifactId>
		    <version>8.0.2</version>
		    <type>pom</type>
	    </dependency>

		<dependency>
	        <groupId>com.itextpdf</groupId>
	        <artifactId>bouncy-castle-adapter</artifactId>
	        <version>9.1.0</version>
	    </dependency>

		<dependency>
		    <groupId>org.simplejavamail</groupId>
		    <artifactId>simple-java-mail</artifactId>
		    <version>8.12.5</version>
		</dependency>
		    
    </dependencies>

    <build>
        <plugins>
            <plugin>
                <groupId>org.apache.torque</groupId>
                <artifactId>torque-maven-plugin</artifactId>
                <version>5.0</version>
                <executions>
                    <execution>
                        <id>generate-sources</id>
                        <phase>generate-sources</phase>
                        <goals>
                            <goal>generate</goal>
                        </goals>
                        <configuration>
                            <packaging>classpath</packaging>
                            <configPackage>org.apache.torque.templates.om</configPackage>
                            <sourceDir>src/main/schema</sourceDir>
                            <options>
                                <torque.om.package>com.opcal</torque.om.package>
                                <torque.database>mysql</torque.database>
                            </options>
                        </configuration>
                    </execution>
                    <execution>
                        <id>generate-sql</id>
                        <phase>generate-sources</phase>
                        <goals>
                            <goal>generate</goal>
                        </goals>
                        <configuration>
                            <packaging>classpath</packaging>
                            <configPackage>org.apache.torque.templates.sql</configPackage>
                            <sourceDir>src/main/schema</sourceDir>
                            <defaultOutputDir>target/generated-sql</defaultOutputDir>
                            <defaultOutputDirUsage>none</defaultOutputDirUsage>
                            <options>
                                <torque.database>mysql</torque.database>
                            </options>
                        </configuration>
                    </execution>
                </executions>
                <dependencies>
                    <dependency>
                        <groupId>org.apache.torque</groupId>
                        <artifactId>torque-templates</artifactId>
                        <version>5.0</version>
                    </dependency>
                </dependencies>
            </plugin>

            <plugin>
                <groupId>org.codehaus.mojo</groupId>
                <artifactId>sql-maven-plugin</artifactId>
                <version>1.4</version>
                <configuration>
                    <driver>com.mysql.cj.jdbc.Driver</driver>
                    <settingsKey>opcalDB</settingsKey>
                    <onError>continue</onError>
                    <autocommit>true</autocommit>
                    <fileset>
                        <basedir>${basedir}/target/generated-sql</basedir>
                        <includes>
                            <include>*.sql</include>
                        </includes>
                    </fileset>
                </configuration>
                <dependencies>
                    <dependency>
                        <artifactId>mysql-connector-java</artifactId>
                        <groupId>mysql</groupId>
                        <version>8.0.21</version>
                    </dependency>
                </dependencies>
            </plugin>

            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-compiler-plugin</artifactId>
                <configuration>
                    <source>21</source>
                    <target>21</target>
                </configuration>
            </plugin>

            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-dependency-plugin</artifactId>
                <executions>
                    <execution>
                        <id>copy-dependencies</id>
                        <phase>package</phase>
                        <goals>
                            <goal>copy-dependencies</goal>
                        </goals>
                        <configuration>
                            <outputDirectory>libs</outputDirectory>
                            <includeScope>runtime</includeScope>
                        </configuration>
                    </execution>
                </executions>
            </plugin>
        </plugins>
    </build>
</project>
